--- a/bmx2escn/Properties/launchSettings.json
+++ b/bmx2escn/Properties/launchSettings.json
@@ -2,7 +2,7 @@
   "profiles": {
     "bmx2escn": {
       "commandName": "Project",
-      "commandLineArgs": "-b test.bmx -j test.json --jt OpenBallance -e test.escn --inpath \"res://textures\""
+      "commandLineArgs": "-b test.bmx -j test.json --jt OpenBallance -e test.escn --inpath \"res://textures/\""
     }
   }
 }
